--- a/sbc2ha-test/config.yaml
+++ b/sbc2ha-test/config.yaml
@@ -10,11 +10,11 @@ arch:
   - armv7
   - i386
 url: https://github.com/dafik/Hassio-Addons/tree/main/sbc2ha-test
-webui: http://[HOST]:[PORT:5005]
-ports:
-  5005/tcp: 5005
-ports_description:
-  5005/tcp: Port to access sbc2ha
+#webui: http://[HOST]:[PORT:5005]
+#ports:
+#  5005/tcp: 5005
+#ports_description:
+#  5005/tcp: Port to access sbc2ha
 image: docker.io/sbc2ha/sbc2ha
 ingress: true
 ingress_port: 8080
