--- a/sbc2ha-test/config.yaml
+++ b/sbc2ha-test/config.yaml
@@ -21,5 +21,5 @@ ingress_port: 8080
 options:
   pigpio_host: [HOST]
 schema:
-  pigpio_host: match(^((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\:?\b){4}$:)
+  pigpio_host: match(^(?:[0-9]{1,3}\.){3}[0-9]{1,3}$)
 
