--- a/sbc2ha-test/config.yaml
+++ b/sbc2ha-test/config.yaml
@@ -19,7 +19,7 @@ image: docker.io/sbc2ha/sbc2ha
 ingress: true
 ingress_port: 8080
 options:
-  pigpio_host: [HOST]
+  pigpio_host: null
 schema:
   pigpio_host: match(^(?:[0-9]{1,3}\.){3}[0-9]{1,3}$)
 
