--- a/sbc2ha-test/config.yaml
+++ b/sbc2ha-test/config.yaml
@@ -16,6 +16,7 @@ ports:
 ports_description:
   8080/tcp: Port to access sbc2ha
 image: docker.io/sbc2ha/sbc2ha
+hassio_api: true
 #ingress: true
 #ingress_port: 8080
 options:
