--- a/sbc2ha-test/config.yaml
+++ b/sbc2ha-test/config.yaml
@@ -17,6 +17,7 @@ ports_description:
   8080/tcp: Port to access sbc2ha
 image: docker.io/sbc2ha/sbc2ha
 hassio_api: true
+hassio_role: default
 #ingress: true
 #ingress_port: 8080
 options:
