--- a/sbc2ha-test/config.yaml
+++ b/sbc2ha-test/config.yaml
@@ -18,6 +18,7 @@ ports_description:
 image: docker.io/sbc2ha/sbc2ha
 hassio_api: true
 hassio_role: default
+host_network: true
 #ingress: true
 #ingress_port: 8080
 options:
